--- a/resume.html
+++ b/resume.html
@@ -54,19 +54,19 @@
                 </div>
                 <div class="history-items">
                     <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National Collage of Art</h4>
+                        <h4>National Collage of Art <i class="fas fa-graduation-cap"></i></h4>
                         <p>Sculptor in residence</p>
                     </div>
-                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
+                    <div class="timeline-item" data-dates="04/2004 - 06/2008">                        
+                        <h4>Fisher and Diaz Funeral Directors <i class="fas fa-briefcase"></i></h4>
                         <p>Junior Embalmer</p>
                     </div>
                     <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
+                        <h4>Phantom Design Inc. Dublin <i class="fas fa-desktop"></i></h4>
                         <p>Junior Front End Developer</p>
                     </div>
                     <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
+                        <h4>Hooli Inc. Silicon Valley <i class="fas fa-desktop"></i></h4>
                         <p>Full Stack Web Developer</p>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                 <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / jQuery</span>
